<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mi2U</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="button_send">Login</string>
    <string name="button_register">REGISTER</string>
    <string name="button_login">LOGIN</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search applications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Your Account</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="registration">Register</string>
    <string name="login_text">LOGIN</string>
    <string name="title_activity_map_me">MapMe</string>

    <string name="knapsack">My Knapsack</string>
    <string name="knapsackItem">item</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="friends">my friends</string>
    <string name= "add_item">Add Parcel</string>
    <string name= "parcel">Parcel</string>
    <string name="title_activity_add__item">Add_Item</string>
    <string name="title_activity_additem">additem</string>
    <string name="prompt_parcel">Name of Parcel</string>
    <string name="title_activity_update_knapsack">UpdateKnapsack</string>
    <string name="title_activity_delivery">DeliveryActivity</string>

    <string name="delivery">pick a delivery</string>
    <string name="direct">direct</string>
    <string name="indirect">indirect</string>
    <string name="deliverySuccess">delivery complete</string>
    <string name="deliveryNoSuccess">unsuccessful</string>

    <string name="remove_item">Remove Parcel</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="add_friend">Add Friend</string>
    <string name="prompt_friend">Name of Friend</string>
    <string name="title_activity_rating">RatingActivity</string>

    <string name="rate">Rate</string>
</resources>
