<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation = "vertical"
    android:background="#ffcdf1ff">

    <!-- knapsack -->
    <LinearLayout
        android:id="@+id/knapsack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <!-- "my knapsack" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/knapsack"
            android:textSize="40dp"
            android:id="@+id/logo"
            android:textColor="#d1d1e0"/>
        <!-- Insert Parcel name -->
        <EditText android:id="@+id/parcel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            android:textColorHint="#d1d1e0"
            android:textColor="#ffbbbcca"
            android:hint="@string/prompt_parcel"/>
        <!-- create display of knapsack items-->
        <ListView
            android:id="@+id/knapsack_List"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!-- Button to add item -->
        <Button
            android:id="@+id/add_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item"
            android:textColor="#d1d1e0"
            android:background="#ffcdf1ff"
            android:onClick="sendMessage"/>
        <!-- Button to remove item -->
        <Button
            android:id="@+id/remove_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_item"
            android:textColor="#d1d1e0"
            android:background="#ffcdf1ff"
            android:onClick="sendMessage"/>
    </LinearLayout>
</LinearLayout>